--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,16 +7,16 @@ edition = "2021"
 
 [dependencies]
 config = "0.12.0"
-anyhow = "1.0.54"
+anyhow = "1.0.55"
 thiserror = "1.0.30"
 
 serde = "1.0.136"
 serde_json = "1.0.79"
 
 tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
-axum = { version = "0.4.5", features = ["http2"] }
-tower = { version = "0.4.12" }
-tower-http = { version = "0.2.2", features = ["trace", "cors"] }
+axum = { version = "0.4.6", features = ["http2"] }
+tower = "0.4.12"
+tower-http = { version = "0.2.3", features = ["trace", "cors"] }
 #hyper = { version = "0.14.17" }
 
 tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
@@ -32,6 +32,6 @@ rand = "0.8.5"
 argon2 = "0.3.4"
 chrono = "0.4.19"
 
-sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"] }
+sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "offline"] }
 uuid = { version = "0.8.2", features = ["v4", "serde"] }
 reqwest = { version = "0.11.9", features = ["json"] }
