--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -21,7 +21,7 @@ tower-http = { version = "0.2.3", features = ["trace", "cors"] }
 
 tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
 
-async-graphql = { version = "3.0.31", features = ["uuid"] }
+async-graphql = { version = "3.0.31", features = ["uuid", "dataloader"] }
 async-graphql-axum = "3.0.31"
 
 #rust-crypto = "0.2.36"
