--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2021"
 [dependencies]
 config = "0.12.0"
 anyhow = "1.0.55"
-thiserror = "1.0.30"
+#thiserror = "1.0.30"
 
 serde = "1.0.136"
-serde_json = "1.0.79"
+#serde_json = "1.0.79"
 
 tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
 axum = { version = "0.4.6", features = ["http2"] }
@@ -25,13 +25,13 @@ async-graphql = { version = "3.0.31", features = ["uuid", "dataloader"] }
 async-graphql-axum = "3.0.31"
 
 #rust-crypto = "0.2.36"
-jwks-client = { git = "https://github.com/jfbilodeau/jwks-client" }
-jsonwebtoken = "8.0.1"
-sha3 = "0.10.1"
-rand = "0.8.5"
-argon2 = "0.3.4"
-chrono = "0.4.19"
+#jwks-client = { git = "https://github.com/jfbilodeau/jwks-client" }
+#jsonwebtoken = "8.0.1"
+#sha3 = "0.10.1"
+#rand = "0.8.5"
+#argon2 = "0.3.4"
+#chrono = "0.4.19"
 
 sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "offline"] }
 uuid = { version = "0.8.2", features = ["v4", "serde"] }
-reqwest = { version = "0.11.9", features = ["json"] }
+#reqwest = { version = "0.11.9", features = ["json"] }
