--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@urql/exchange-graphcache": "^4.3.6",
     "@urql/exchange-refocus": "^0.2.5",
+    "classnames": "^2.3.1",
     "next": "^12.1.0",
     "next-urql": "^3.3.2",
     "react": "17.0.2",
