--- a/server/config/development.toml
+++ b/server/config/development.toml
@@ -3,7 +3,7 @@ host = "0.0.0.0"
 port = 8080
 
 [postgres]
-host = "localhost"
+host = "host.docker.internal"
 port = 5432
 user = "postgres"
 password = "postgres"
